update the slider

--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
         </section>
 
         <!-- slider section -->
+         <container class="py-5">
         <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -166,6 +167,7 @@
                 <span class="visually-hidden">Next</span>
             </button>
         </div>
+         </container>
 
 
         <!-- contact section -->
